# drone-plugins

./: .drone.yml  .gitignore  Dockerfile  README.md  pyproject.toml
ansible/: Dockerfile  pyproject.toml
ansible/src/drone_ansible/: common.py  drone.py  main.py
src/: drone.py  main.py
