[tool.poetry]
name = "drone-plugins"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker-compose = { version = "^1.27.2", optional = true }

[tool.poetry.extras]
docker-compose = ["docker-compose"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
