[tool.poetry]
name = "drone-ansible"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.13"
pyyaml = "^5.3.1"
cryptography = "^3.1"
packaging = "^20.4"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
drone-ansible = 'drone_ansible.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
